--- a/React/Cours/2-Redux/1-premier-store-connect/1-premier-projet-hooks/package.json
+++ b/React/Cours/2-Redux/1-premier-store-connect/1-premier-projet-hooks/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "tp-siret-api",
+  "name": "premier-store-connect",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.24.0",
-    "bootstrap": "^5.1.3",
-    "dotenv": "^10.0.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
