--- a/DotNET/FormationDotNet/CoursPOO/CoursPOO.csproj
+++ b/DotNET/FormationDotNet/CoursPOO/CoursPOO.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Interfaces\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
 </Project>
