--- a/DotNET/FormationDotNet/CaisseEnregistreuse/CaisseEnregistreuse/CaisseEnregistreuse.csproj
+++ b/DotNET/FormationDotNet/CaisseEnregistreuse/CaisseEnregistreuse/CaisseEnregistreuse.csproj
@@ -13,4 +13,7 @@
     <Folder Include="Classes\" />
     <Folder Include="Interfaces\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="4.0.0" />
+  </ItemGroup>
 </Project>
