--- a/DotNET/FormationDotNet/CorrectionTPHotel/CorrectionTPHotel.csproj
+++ b/DotNET/FormationDotNet/CorrectionTPHotel/CorrectionTPHotel.csproj
@@ -5,4 +5,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="4.0.0" />
+  </ItemGroup>
+
 </Project>
