suite correction caisse wpf

--- a/DotNET/FormationDotNet/CaisseEnregistreuse/CorrectionWPF/CorrectionWPF.csproj
+++ b/DotNET/FormationDotNet/CaisseEnregistreuse/CorrectionWPF/CorrectionWPF.csproj
@@ -7,4 +7,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CaisseEnregistreuse\CaisseEnregistreuse.csproj" />
+  </ItemGroup>
+
 </Project>
