correction test unitaire pile

--- a/DotNET/FormationDotNet/CousTestTDD/CousTestTDD.csproj
+++ b/DotNET/FormationDotNet/CousTestTDD/CousTestTDD.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CorrectionPile\CorrectionPile.csproj" />
     <ProjectReference Include="..\CoursTDD\CoursTDD.csproj" />
   </ItemGroup>
 
