--- a/DotNET/FormationDotNet/CousTestTDD/CousTestTDD.csproj
+++ b/DotNET/FormationDotNet/CousTestTDD/CousTestTDD.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+    <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.7" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.7" />
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
@@ -16,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\CorrectionPile\CorrectionPile.csproj" />
     <ProjectReference Include="..\CoursTDD\CoursTDD.csproj" />
+    <ProjectReference Include="..\TpPendu\TpPendu.csproj" />
   </ItemGroup>
 
 </Project>
