--- a/React/Exercices/TP-SiretAPI/tp-siret-api/Dockerfile
+++ b/React/Exercices/TP-SiretAPI/tp-siret-api/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get install nodejs npm -y
 WORKDIR /app
 
 COPY . . 
-
+ENV REACT_APP_API_KEY=92a85b30-ce60-3524-be59-84ff2f981773
 RUN npm install
 
 EXPOSE 3000
