--- a/DotNET/FormationDotNet/ContactAspNetCore/ContactAspNetCore.csproj
+++ b/DotNET/FormationDotNet/ContactAspNetCore/ContactAspNetCore.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CoursEFCore\CoursEFCore.csproj" />
+  </ItemGroup>
+
 </Project>
