--- a/DotNET/FormationDotNet/ContactAspNetCore/ContactAspNetCore.csproj
+++ b/DotNET/FormationDotNet/ContactAspNetCore/ContactAspNetCore.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\CoursEFCore\CoursEFCore.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\img\" />
+  </ItemGroup>
+
 </Project>
