suite cours api rest

--- a/DotNET/FormationDotNet/coursAPI/coursAPI/Properties/launchSettings.json
+++ b/DotNET/FormationDotNet/coursAPI/coursAPI/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "coursAPI": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "weatherforecast",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
