--- a/DotNET/FormationDotNet/ContactAPIRest/ContactAPIRest/ContactAPIRest.csproj
+++ b/DotNET/FormationDotNet/ContactAPIRest/ContactAPIRest/ContactAPIRest.csproj
@@ -22,5 +22,11 @@
   <ItemGroup>
     <Folder Include="Tools\" />
     <Folder Include="Models\" />
+    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\avatar\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="wwwroot\" />
+    <Content Remove="wwwroot\avatar\" />
   </ItemGroup>
 </Project>
