--- a/DotNET/FormationDotNet/CoursJWT/CoursJWT/CoursJWT.csproj
+++ b/DotNET/FormationDotNet/CoursJWT/CoursJWT/CoursJWT.csproj
@@ -7,11 +7,13 @@
   <ItemGroup>
     <None Remove="Services\" />
     <None Remove="System.IdentityModel.Tokens.Jwt" />
+    <None Remove="Microsoft.AspNetCore.Authentication.JwtBearer" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.13" />
   </ItemGroup>
 </Project>
